--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'ItalianPlate';
   src: url('../fonts/ItalianPlateNo2-Regular.otf') format('opentype');
@@ -17,7 +16,6 @@
   font-weight: 700;
   font-style: normal;
 }
-
 
 :root {
   --vt-c-white: #ffffff;
@@ -91,13 +89,12 @@ body {
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
-  transition:
-    color 0.5s,
-    background-color 0.5s;
+  transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'ItalianPlate', sans-serif;
 }
 
 /* === TYPOGRAPHY STYLES === */
@@ -146,4 +143,3 @@ p {
   font-weight: 300;
   opacity: 0.8;
 }
-
